--- a/ext/codemirror/3.19/theme/monokai.css
+++ b/ext/codemirror/3.19/theme/monokai.css
@@ -1,6 +1,6 @@
 /* Based on Sublime Text's Monokai theme */
 
-.cm-s-monokai.CodeMirror {background: #272822; color: #f8f8f2; font-family: Consolas; font-size: 13px; line-height: 1.3em; }
+.cm-s-monokai.CodeMirror {background: #272822; color: #f8f8f2; font-family: Consolas, Monospace; font-size: 13px; line-height: 1.3em; }
 .cm-s-monokai div.CodeMirror-selected {background: #49483E !important;}
 .cm-s-monokai .CodeMirror-gutters {background: #272822; border-right: solid 1px rgb(100,100,100);}
 .cm-s-monokai .CodeMirror-linenumber {color: #d0d0d0;}
